# chatterbox-sv

./: .gitignore  README.md  pyproject.toml
examples/: example_tts.py
src/chatterbox/: __init__.py  mtl_tts.py
src/chatterbox/models/s3gen/: flow.py
src/chatterbox/models/s3gen/matcha/: decoder.py
src/chatterbox/models/s3tokenizer/: __init__.py  s3tokenizer.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py
src/chatterbox/models/t3/modules/: perceiver.py
src/chatterbox/models/tokenizers/: __init__.py  tokenizer.py
