[project]
name = "chatterbox-tts"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=2.3.5",
    "librosa>=0.11.0",
    "s3tokenizer>=0.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
    "diffusers>=0.35.2",
    "resemble-perth>=1.0.1",
    "safetensors>=0.7.0",
    "torchcodec>=0.8.1",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "ruff>=0.14.7",
]
